# fediviz

./: .dockerignore  .drone.yml  .gitignore  CONTRIBUTING.md  CREDITS.md  Dockerfile  LICENSE.md  PRIVACY.md  README.md  credits.md  dist.config.toml  dist.env  dokploy.docker-compose.yml  local.docker-compose.yml  prod.docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
src/fediviz/: __init__.py  __main__.py  config.py  layout.py  styles.py
src/fediviz/calculations/: __init__.py  actor.py  bookmarks.py  likes.py  outbox.py
src/fediviz/components/: __init__.py  actor.py  banner.py  bookmarks.py  docs.py  footer.py  header.py  hero.py  license.py  likes.py  outbox.py  privacy.py
src/fediviz/pages/: __init__.py
src/fediviz/static/: LICENSE.md
src/fediviz/utils/: __init__.py  storage.py  uploads.py  web.py
src/fediviz/views/: __init__.py  actor.py  bookmarks.py  docs.py  layout.py  license.py  likes.py  outbox.py  posts.py  privacy.py  profile.py  uploads.py  welcome.py
