[tool.poetry]
name = "fediviz"
version = "0.1.0"
description = "Privacy friendly data visualization tool for mastodon "
authors = ["Ada <github@adapdr.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
pandas = "^2.2.3"
streamlit-extras = "^0.5.5"
plotly = "^6.0.0"
requests = "^2.32.3"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
