[tool.poetry]
name = "fediviz"
version = "0.1.0"
description = "Privacy friendly data visualization tool for mastodon "
authors = ["Ada <github@adapdr.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.0"
pandas = "^2.3.3"
streamlit-extras = ">=0.5.5,<1.5.0"
plotly = "^6.7.0"
requests = "^2.33.1"
pydantic-settings = "^2.7.1"


[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
flake8 = "^7.3.0"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
